--- a/WebProgrammingProject/Views/Shared/_Layout.cshtml
+++ b/WebProgrammingProject/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                 <ul class="navbar-nav ml-auto">
                     <partial name="_LoginPartial" />
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Home" asp-action="Index2">Index2</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                 </ul>
             </div>
         </div>
