--- a/WebProgrammingProject/Views/Store/Create.cshtml
+++ b/WebProgrammingProject/Views/Store/Create.cshtml
@@ -5,43 +5,51 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<header class="masthead">
+    <div class="container d-flex h-100 align-items-center">
+        <div class="mx-auto text-center">
+            <h1>Create</h1>
 
-<h4>ProductViewModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ProductName" class="control-label"></label>
-                <input asp-for="ProductName" class="form-control" />
-                <span asp-validation-for="ProductName" class="text-danger"></span>
+            <h4>ProductViewModel</h4>
+            <hr />
+            <div class="row">
+                <div class="col-md-4">
+                    <form asp-action="Create">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="ProductName" class="control-label"></label>
+                            <input asp-for="ProductName" class="form-control" />
+                            <span asp-validation-for="ProductName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="StockAmount" class="control-label"></label>
+                            <input asp-for="StockAmount" class="form-control" />
+                            <span asp-validation-for="StockAmount" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="SupplierID" class="control-label"></label>
+                            <select asp-for="SupplierID" class="form-control" asp-items="ViewBag.SupplierID"></select>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="UnitsOnOrder" class="control-label"></label>
+                            <input asp-for="UnitsOnOrder" class="form-control" />
+                            <span asp-validation-for="UnitsOnOrder" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Create" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="StockAmount" class="control-label"></label>
-                <input asp-for="StockAmount" class="form-control" />
-                <span asp-validation-for="StockAmount" class="text-danger"></span>
+
+            <div>
+                <a asp-action="Index">Back to List</a>
             </div>
-            <div class="form-group">
-                <label asp-for="SupplierID" class="control-label"></label>
-                <select asp-for="SupplierID" class ="form-control" asp-items="ViewBag.SupplierID"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="UnitsOnOrder" class="control-label"></label>
-                <input asp-for="UnitsOnOrder" class="form-control" />
-                <span asp-validation-for="UnitsOnOrder" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+</header>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
