--- a/WebProgrammingProject/Views/Store/Index.cshtml
+++ b/WebProgrammingProject/Views/Store/Index.cshtml
@@ -10,14 +10,11 @@
         <div class="mx-auto text-center">
             <h1>Store</h1>
 
-
+            <p>You can choose </p>
         </div>
     </div>
 </header>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -29,6 +26,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.UnitsOnOrder)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Supplier)
@@ -51,11 +51,6 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Supplier.Address)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.ProductID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ProductID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a>
                 </td>
             </tr>
         }
