--- a/WebProgrammingProject/Views/Shared/_Layout.cshtml
+++ b/WebProgrammingProject/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@
                         <i class="fas fa-mobile-alt text-primary mb-2"></i>
                         <h4 class="text-uppercase m-0">Phone</h4>
                         <hr class="my-4" />
-                        <div class="small text-black-50">+1 (555) 902-8832</div>
+                        <div class="small text-black-50">+90 (555) 902-XXXX</div>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
 <!-- Footer-->
 <footer class="footer bg-black small text-center text-white-50">
     <div class="container">
-        Copyright © Your Website 2020
+        Copyright © Motorcycle Culture 2021
     </div>
 </footer>
 <!-- Bootstrap core JS-->
