Minor changes on views.

--- a/WebProgrammingProject/Views/Store/Index.cshtml
+++ b/WebProgrammingProject/Views/Store/Index.cshtml
@@ -5,68 +5,27 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<header class="masthead">
-    <div class="container d-flex h-100 align-items-center">
-        <div class="mx-auto text-center">
-            <h1>Store</h1>
-
-            <div class="row">
-                <div class="col-md-2">
-                    @*<img src="~/assets/img/fatboy2020.png" />*@
-                    @foreach (var item in Model)
-                    {
-                        <img src="~/assets/img/fatboy2020.png" />
-                        @Html.DisplayFor(modelItem => item.ProductName)
-                        @Html.DisplayFor(modelItem => item.StockAmount)
-                        @Html.DisplayFor(modelItem => item.Price)
-                    }
+<header class="" style="margin:100px">
+    <div class="container d-flex h-100">
+        <div class="mx-auto">
+            @*<img src="~/assets/img/fatboy2020.png" />*@
+            @foreach (var item in Model)
+            {
+                <div class="card" style="width: 40rem;">
+                    <img src="~/assets/img/fatboy2020.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">@Html.DisplayFor(modelItem => item.ProductName)</h5>
+                        <p class="card-text">
+                            @Html.DisplayNameFor(model => model.StockAmount): @Html.DisplayFor(modelItem => item.StockAmount)<br />
+                            @Html.DisplayNameFor(model => model.Price): @Html.DisplayFor(modelItem => item.Price)<br />
+                        </p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-            </div>
-
+                <br />
+            }
         </div>
     </div>
 </header>
-
-@*<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StockAmount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitsOnOrder)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Supplier.CompanyName)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StockAmount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Supplier.CompanyName)
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>*@
 
 
