--- a/WebProgrammingProject/Views/Shared/_Layout.cshtml
+++ b/WebProgrammingProject/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Store" asp-action="Index">Store</a></li>
                     @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                     {
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="AdminPanel" asp-action="Index">Admin Panel</a></li>
