--- a/WebProgrammingProject/Views/AdminPanel/Edit.cshtml
+++ b/WebProgrammingProject/Views/AdminPanel/Edit.cshtml
@@ -1,4 +1,8 @@
-﻿@model WebProgrammingProject.Models.ProductViewModel
+﻿@using Microsoft.AspNetCore.Localization
+@using Microsoft.AspNetCore.Builder
+@using Microsoft.Extensions.Options
+@inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer;
+@model WebProgrammingProject.Models.ProductViewModel
 
 @{
     ViewData["Title"] = "Edit";
