--- a/WebProgrammingProject/Views/Shared/Error.cshtml
+++ b/WebProgrammingProject/Views/Shared/Error.cshtml
@@ -1,4 +1,8 @@
-﻿@model ErrorViewModel
+﻿@using Microsoft.AspNetCore.Localization
+@using Microsoft.AspNetCore.Builder
+@using Microsoft.Extensions.Options
+@inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer;
+@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
