--- a/WebProgrammingProject/Views/Shared/_Layout.cshtml
+++ b/WebProgrammingProject/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Localization
+@using Microsoft.AspNetCore.Builder
+@using Microsoft.Extensions.Options
+@inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -6,11 +11,10 @@
     <title>@ViewData["Title"] - WebProgrammingProject</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/styles.css" />
-
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Grayscale - Start Bootstrap Theme</title>
     <link rel="icon" type="image/x-icon" href="~/assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -21,21 +25,21 @@
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body id="page-top" style="background-color:rgb(109, 94, 94)">
-    
+
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Motorcycle Culture</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">@localizer["Motorcycle Culture"]</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Store" asp-action="Index">Store</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Home" asp-action="Index">@localizer["Home"]</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="Store" asp-action="Index">@localizer["Store"]</a></li>
                     @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                     {
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="AdminPanel" asp-action="Index">Admin Panel</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" asp-area="" asp-controller="AdminPanel" asp-action="Index">@localizer["Admin Panel"]</a></li>
                     }
                     <partial name="_LoginPartial" />
                     <li class="nav-item"><partial name="_Culture" /></li>
@@ -50,21 +54,6 @@
     </main>
 
 
-    <!-- Signup-->
-    <section class="signup-section" id="signup">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-lg-8 mx-auto text-center">
-                    <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                    <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                    <form class="form-inline d-flex">
-                        <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." />
-                        <button class="btn btn-primary mx-auto" type="submit">Subscribe</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- Contact-->
     <section class="contact-section bg-black">
         <div class="container">
@@ -73,7 +62,7 @@
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Address</h4>
+                            <h4 class="text-uppercase m-0">@localizer["Address"]</h4>
                             <hr class="my-4" />
                             <div class="small text-black-50">4923 Market Street, Orlando FL</div>
                         </div>
@@ -93,7 +82,7 @@
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Phone</h4>
+                            <h4 class="text-uppercase m-0">@localizer["Phone"]</h4>
                             <hr class="my-4" />
                             <div class="small text-black-50">+90 (555) 902-XXXX</div>
                         </div>
@@ -122,6 +111,7 @@
     <!-- Bootstrap core JS-->
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js%22%3E"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     @RenderSection("Scripts", required: false)
